# ktnsrm

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
example/: OOP_implementation.ipynb  functional_implementation.ipynb  illustration_legacy.ipynb
src/ktnsrm/: KT.py  KT_model.py  SpecRep.py  SpecRepMethod.py  T_Envelop.py  __init__.py  utils.py
tests/: test_ktnsrm.py
