[tool.poetry]
name = "ktnsrm"
version = "0.1.0"
description = "Spectral models and Spectral Representation Method"
authors = ["Y.Chen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
